--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,10 @@ django-cors-headers==4.4.0
 djangorestframework-simplejwt==5.3.0
 django-filter==23.5
 
+# Production Server
+gunicorn==21.2.0
+whitenoise==6.6.0
+
 # Database
 psycopg2-binary==2.9.9  # PostgreSQL adapter
 
@@ -16,6 +20,7 @@ stripe==14.3.0
 
 # Configuration
 python-decouple==3.8
+dj-database-url==2.1.0
 
 # Async Tasks
 celery==5.3.4
