--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: collabo-backend
     env: python
+    runtime: python
     buildCommand: "./build.sh"
     startCommand: "gunicorn influencer_platform.wsgi:application"
     envVars:
@@ -11,7 +12,3 @@ services:
         generateValue: true
       - key: DEBUG
         value: False
-      - key: DATABASE_URL
-        fromDatabase:
-          name: collabo-db
-          property: connectionString
